# Mammotion-HA

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  FUNDING.yml  README.md  agora_test.html  crowdin.yml  hacs.json  info.md  mypy.ini  pyproject.toml  robotmowerscheduler.yaml  svg_map_aligner.html
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: beta-release.yml  crowdin.yml  release.yml  update-issue-template.yml
custom_components/mammotion/: __init__.py  agora_api.py  agora_rtc_capabilities.py  agora_sdp.py  agora_websocket.py  automation.py  binary_sensor.py  button.py  camera.py  config.py  config_flow.py  const.py  coordinator.py  device_tracker.py  diagnostics.py  entity.py  error_handling.py  firmware.py  geojson_utils.py  icons.json  image.py  lawn_mower.py  manifest.json  map_renderer.py  mapping.py  models.py  number.py  scheduler.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  update.py  vacuum.py  yuka.py
custom_components/mammotion/translations/: cs.json  da.json  de.json  en.json  fr.json  hu.json  it.json  nl.json  pl.json  ro.json  sl.json  sv.json
custom_components/mammotion/www/: AgoraRTC_N.js  agora-client.js
luba/: __init__.py  api.py  application_credentials.py  config_flow.py  const.py  coordinator.py  manifest.json
tests/: test_automation.py  test_firmware.py  test_mapping.py  test_scheduler.py
