[tool.poetry]
name = "ha-luba"
version = "0.0.1"
description = "Mammotion lawn mower integration for HACS"
authors = ["Michael Arthur <michael@jumblesoft.co.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
pyluba = "0.0.20"
homeassistant = "^2024.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
